// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Bunker 1`] = `
{
  "deadEnds": 0,
  "decorativeDoorsApplied": 4,
  "doorFramesApplied": 0,
  "junctions": 269,
  "loopsAdded": 1,
  "reachableFloors": 319,
  "wideness": 78,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Catacombs 1`] = `
{
  "deadEnds": 1,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 557,
  "loopsAdded": 1,
  "reachableFloors": 611,
  "wideness": 283,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Cave 1`] = `
{
  "deadEnds": 8,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 181,
  "loopsAdded": 2,
  "reachableFloors": 250,
  "wideness": 74,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Dungeon 1`] = `
{
  "deadEnds": 0,
  "decorativeDoorsApplied": 8,
  "doorFramesApplied": 0,
  "junctions": 309,
  "loopsAdded": 2,
  "reachableFloors": 361,
  "wideness": 19,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Golem 1`] = `
{
  "deadEnds": 0,
  "decorativeDoorsApplied": 11,
  "doorFramesApplied": 0,
  "junctions": 310,
  "loopsAdded": 3,
  "reachableFloors": 376,
  "wideness": 19,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Jungle 1`] = `
{
  "deadEnds": 9,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 232,
  "loopsAdded": 3,
  "reachableFloors": 294,
  "wideness": 2,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics LivingBio 1`] = `
{
  "deadEnds": 4,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 169,
  "loopsAdded": 2,
  "reachableFloors": 231,
  "wideness": 107,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Palace 1`] = `
{
  "deadEnds": 0,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 435,
  "loopsAdded": 0,
  "reachableFloors": 472,
  "wideness": 167,
}
`;

exports[`floor layoutMetrics snapshots (topology regression) > layoutMetrics Ruins 1`] = `
{
  "deadEnds": 0,
  "decorativeDoorsApplied": 0,
  "doorFramesApplied": 0,
  "junctions": 518,
  "loopsAdded": 0,
  "reachableFloors": 534,
  "wideness": 281,
}
`;
